# tailtales

./: Cargo.toml  LUA_SCRIPTING.md  PHASE1_IMPLEMENTATION.md  README.md  RECORD_PROCESSORS.md  _init.lua  settings.yaml
.github/workflows/: ci.yml
docs/: AGENTS.md
examples/: beep_on_error.lua  bytes_count_processor.lua  mark_by_log_level.lua  record_print.lua  test.lua
src/: application.rs  args.rs  ast.rs  completions.rs  events.rs  keyboard_input.rs  keyboard_management.rs  lib.rs  lua_console.rs  lua_engine.rs  main.rs  parser.rs  record.rs  recordlist.rs  regex_cache.rs  settings.rs  state.rs  tuichrome.rs  utils.rs
tests/: direct_argument_parsing_tests.rs  for_each_record_tests.rs  lua_console_initialization_tests.rs  lua_function_tests.rs  lua_phase2_tests.rs  lua_phase3_tests.rs  lua_print_output_tests.rs
