[package]
name = "tailtales"
description = " Flexible log viewer for logfmt and other formats with filtering, LogQL expressions, and real-time pipe following."
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"
authors = ["David Moreno"]
keywords = ["tail", "logs", "logfmt", "monitoring", "development"]
homepage = "https://github.com/davidmoreno/tailtales"
repository = "https://github.com/davidmoreno/tailtales"
readme = "README.md"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.25"
regex = "1.11.1"
rayon = "1.10.0"
lazy_static = "1.5.0"
notify = "7.0.0"
rand = "0.8.5"
