[package]
name = "tailtales"
description = "Flexible log viewer for logfmt and other formats with filtering, filtering expressions, and real-time pipe following."
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["David Moreno"]
keywords = ["tail", "logs", "logfmt", "monitoring", "development"]
homepage = "https://github.com/davidmoreno/tailtales"
repository = "https://github.com/davidmoreno/tailtales"
readme = "README.md"

[[bin]]
name = "tt"
path = "src/main.rs"



[dependencies]
ratatui = "0.29"
crossterm = "0.28"
regex = "1.11.1"
rayon = "1.10.0"
lazy_static = "1.5.0"
notify = "8.0.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
xdg = "^2.1"
urlencoding = "2.1.0"
hostname = "0.4"
whoami = "1.2"
flate2 = "1.0"
nix = "0.22.0"
chrono = "0.4"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
